# zest

./: .gitignore  .gitmodules  404.html  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  compile.sh  compile_commands.json  index.html  lib_bundle.h  mkdocs.yml  picopng.cpp  picopng.h  pkt_allocator.h  sitemap.xml  stb_image_resize.h  stb_rect_pack.h  zest.app  zest.c  zest.cpp  zest.h  zest_impl.h  zest_utilities.h  zest_vulkan.h  zloc.h
examples/GLFW/: CMakeLists.txt
examples/GLFW/example-template/: zest-shadow-mapping.cpp  zest-shadow-mapping.h
examples/GLFW/zest-cascading-shadows/: README.md  zest-cascading-shadows.cpp  zest-cascading-shadows.h
examples/GLFW/zest-cascading-shadows/shaders/: debugshadowmap.frag  debugshadowmap.vert  depthpass.frag  scene.vert
examples/GLFW/zest-compute-example/: README.md  zest-compute-example.cpp  zest-compute-example.h
examples/GLFW/zest-compute-example/shaders/: compile.bat  particle.comp  particle.frag  particle.slang
examples/GLFW/zest-compute-example/spv/: imgui.spv  (+4 more)
examples/GLFW/zest-custom-sprite-instance/: zest-custom-sprite-instance.cpp  zest-custom-sprite-instance.h
examples/GLFW/zest-fonts/: zest-fonts.cpp  zest_imconfig.h
examples/GLFW/zest-imgui-template/: imgui.ini  stb_image.h  zest-imgui-template.cpp  zest-imgui-template.h  zest_imconfig.h
examples/GLFW/zest-implot/: zest-implot.cpp  zest-implot.h
examples/GLFW/zest-instancing/: zest-instancing.cpp  zest-instancing.h
examples/GLFW/zest-mesh-instances/: zest-mesh-instances.cpp
examples/GLFW/zest-minimal-template/: README.md  zest-minimal-template.cpp
examples/GLFW/zest-msdf-font-maker/: RussoOne-Regular.zft  imgui.ini  main.cpp  zest-msdf-font-maker.cpp  zest-msdf-font-maker.h
examples/GLFW/zest-pbr/: zest-pbr.cpp  zest-pbr.h
examples/GLFW/zest-pbr-deferred/: zest-pbr-deferred.cpp  zest-pbr-deferred.h
examples/GLFW/zest-pbr-forward/: README.md  zest-pbr-forward.cpp  zest-pbr-forward.h
examples/GLFW/zest-pbr-texture/: README.md  zest-pbr-texture.cpp  zest-pbr-texture.h
examples/GLFW/zest-render-graph-tests/: zest-render-graph-tests.cpp  zest-render-graph-tests.h
examples/GLFW/zest-render-targets/: README.md  zest-msdf-fonts.c  zest-render-targets.cpp  zest-render-targets.h
examples/GLFW/zest-ribbons/: zest-ribbons.cpp  zest-ribbons.h
examples/GLFW/zest-shader-compiling/: zest-shader-compiling.cpp  zest-shader-compiling.h
examples/GLFW/zest-shadow-mapping/: README.md  zest-shadow-mapping.cpp  zest-shadow-mapping.h
examples/GLFW/zest-stability-ai/: zest-stability-ai.cpp  zest-stability-ai.h
examples/GLFW/zest-testing/: zest-testing.cpp  zest-testing.h
examples/GLFW/zest-tests/: README.md  zest-compute-tests.cpp  zest-frame-graph-stress.cpp  zest-frame-graph-tests.cpp  zest-pipeline-tests.cpp  zest-resource-management-tests.cpp  zest-tests.cpp  zest-tests.h  zest-user-tests.cpp
examples/GLFW/zest-timelinefx/: README.md  zest-timelinefx.cpp
examples/GLFW/zest-timelinefx-c/: README.md  zest-timelinefx-c.c
examples/GLFW/zest-timelinefx-instanced-effects/: README.md  zest-timelinefx-instanced-effects.cpp  zest-timelinefx-instanced-effects.h
examples/GLFW/zest-timelinefx-prerecorded-effects/: zest-timelinefx-prerecorded-effects.cpp  zest-timelinefx-prerecorded-effects.h
examples/GLFW/zest-timelinefx-tests/: zest-timelinefx-tests.cpp
examples/GLFW/zest-vaders/: timelinefx.h  zest-vaders.cpp
examples/SDL2/: CMakeLists.txt
examples/SDL2/example-template/: README.md  zest-shadow-mapping.cpp
examples/SDL2/zest-cascading-shadows/: zest-cascading-shadows.cpp  zest-cascading-shadows.h
examples/SDL2/zest-compute-example/: zest-compute-example.cpp  zest-compute-example.h
examples/SDL2/zest-fonts/: README.md  zest-fonts.cpp
examples/SDL2/zest-imgui-template/: README.md  zest-imgui-template.cpp  zest-imgui-template.h
examples/SDL2/zest-implot/: README.md  zest-implot.cpp  zest-implot.h
examples/SDL2/zest-indirect-draw/: README.md  zest-indirect-draw.cpp  zest-indirect-draw.h
examples/SDL2/zest-instancing/: README.md  zest-instancing.cpp  zest-instancing.h
examples/SDL2/zest-minimal-template/: zest-minimal-template.cpp
examples/SDL2/zest-pbr-deferred/: README.md  zest-pbr-deferred.cpp  zest-pbr-deferred.h
examples/SDL2/zest-pbr-forward/: zest-pbr-forward.cpp  zest-pbr-forward.h
examples/SDL2/zest-pbr-texture/: zest-pbr-texture.cpp  zest-pbr-texture.h
examples/SDL2/zest-render-targets/: zest-render-targets.cpp  zest-render-targets.h
examples/SDL2/zest-ribbons/: README.md  zest-ribbons.cpp  zest-ribbons.h
examples/SDL2/zest-sdl2-imgui-template/: README.md  zest-sdl2-imgui-template.cpp  zest-sdl2-imgui-template.h
examples/SDL2/zest-shadow-mapping/: zest-shadow-mapping.cpp  zest-shadow-mapping.h
examples/SDL2/zest-tests/: README.md  zest-compute-tests.cpp  zest-device-reset-tests.cpp  zest-frame-graph-stress.cpp  zest-frame-graph-tests.cpp  zest-layer-tests.cpp  zest-pipeline-tests.cpp  zest-resource-management-tests.cpp  zest-tests.cpp  zest-tests.h  zest-user-tests.cpp
examples/SDL2/zest-timelinefx/: zest-timelinefx.cpp  zest_imconfig.h
examples/SDL2/zest-timelinefx-c/: zest-timelinefx-c.c
examples/SDL2/zest-timelinefx-instanced-effects/: zest-timelinefx-instanced-effects.cpp
examples/SDL2/zest-timelinefx-prerecorded-effects/: README.md  zest-timelinefx-prerecorded-effects.cpp  zest-timelinefx-prerecorded-effects.h
examples/SDL2/zest-vaders/: README.md  zest-vaders.cpp
examples/Simple/: CMakeLists.txt
examples/Simple/zest-fonts/: zest-fonts.cpp
examples/Simple/zest-instance-layers/: zest-instance-layers.cpp
examples/Simple/zest-lines/: zest-lines.cpp
examples/Simple/zest-minimal-template/: zest-minimal-template.cpp  zest_impl.c
examples/Simple/zest-remove-images/: zest-remove-images.cpp
examples/Simple/zest-render-targets/: zest-msdf-fonts.c  zest-msdf-fonts.h  zest-render-targets.cpp  zest-render-targets.h
examples/Simple/zest-slang/: zest-slang.cpp
examples/Simple/zest-timelinefx-c/: timelinefx-test.h  zest-timelinefx-c.c
examples/Simple/zest-zloc/: gpu_allocator.h  zest-zloc.c
(+349 files in other folders)
